7.7.0-FORK (05-12-2024)
- Refactor: Adapts MenuItem to new MenuItem inteface in qub-foundation-core-api [#qubIT-Fenix-5888]

7.6.1-FORK (12-09-2024)
- Bug fix: Correcting security issue regarding user search endpoint [#qubIT-Omnis-6849]

7.6.0-FORK (02-09-2024)
- Improvement: Ensures Release Notes is in the jar [#qubIT-Omnis-6579]